tests/lean/renameBug.lean.expected.out
renameBug.lean:3:13-3:14: error: unknown identifier 'c'
